--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.table-cell {
+    width: 60px;
+    /* Ajusta el tamaño según tus necesidades */
+    height: 60px;
+    /* Ajusta el tamaño según tus necesidades */
+    text-align: center;
+    vertical-align: middle;
+    font-size: 24px;
+    /* Tamaño de fuente para los símbolos */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.table-row {
+    height: 60px;
+    /* Ajusta el tamaño según tus necesidades */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table-container {
+    display: inline-block;
+    text-align: center;
+    /* Asegura que el contenido de la tabla esté centrado */
 }
